unpackaged/main/default/objects/Team__c/fields/MaxSize__c.field-meta.xml
<CustomField>
    <fullName>MaxSize__c</fullName>
    <label>MaxSize</label>
    <precision>20</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>