unpackaged/main/default/objects/Team__c/fields/TeamName__c.field-meta.xml
<CustomField>
    <fullName>TeamName__c</fullName>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>