unpackaged/main/default/objects/Team__c/fields/TeamOwnerId__c.field-meta.xml
<CustomField>
    <fullName>TeamOwnerId__c</fullName>
    <label>OwnerId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>